# hypha

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  LICENSE.md  README.md
.github/: COMMIT_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build-cli/: action.yml
.github/workflows/: cli.yml  docs.yml  release.yml  vscode.yml
cli/: Cargo.toml  README.md
cli/docs/: development.md
cli/src/: cli.rs  config.rs  constants.rs  main.rs  utils.rs
cli/src/commands/: backlinks.rs  delete.rs  info.rs  lint.rs  list.rs  mod.rs  new.rs  open.rs  rename.rs  search.rs
cli/src/core/: frontmatter.rs  index.rs  markdown.rs  mod.rs  query.rs  template.rs  topic.rs
cli/tests/: cli_integration.rs
cli/tests/fixtures/: broken-links.md  no-frontmatter.md  orphan.md  topic-a.md  topic-b.md  topic-c.md
docs/: README.md
docs/explanations/: architecture.md  frontmatter-schema.md  linking.md
docs/how-to/: create-topic.md  find-backlinks.md  query-topics.md
docs/references/: cli.md  frontmatter.md  query-syntax.md
docs/tutorials/: getting-started-cli.md  getting-started-vscode.md
vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/docs/: development.md
vscode/src/: cli.ts  commands.ts  constants.ts  extension.ts  topicTree.ts
